Fixed issue with public private not displaying properly on screenshots and also added max char and overflow to title.

--- a/src/main/resources/static/css/team-profile.css
+++ b/src/main/resources/static/css/team-profile.css
@@ -902,4 +902,13 @@ ul.formation-description > li {
     width: 100% !important;
 }
 
+.media-name p, #name-box {
+    white-space: nowrap;
+    text-overflow: '...';
+    overflow: hidden;
+}
+
+
+
+
 
